@@ -25,9 +25,6 @@ before_install:
   - rm -f Gemfile.lock
 
 jobs:
-  allow_failures:
-    - env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 5.0"
-
   include:
     - stage: check
       rvm: 2.4.1
@@ -36,8 +33,10 @@ jobs:
         - bundle exec rake check:dot_underscore
         - bundle exec rake check:test_file
         - bundle exec rake pkg:check_version
-        - bundle exec rake pkg:compare_latest_tag
         - bundle exec rake metadata_lint
+        - bundle exec rake pkg:compare_latest_tag
+        - bundle exec rake pkg:create_tag_changelog
+        - bundle exec rake lint
         - bundle exec puppet module build
 
     - stage: spec
@@ -64,7 +63,6 @@ jobs:
       script:
         - bundle exec rake spec
 
-    # This needs to be last since we have an acceptance test
     - stage: deploy
       rvm: 2.4.1
       script:
@@ -72,6 +70,7 @@ jobs:
       before_deploy:
         - "export PUPMOD_METADATA_VERSION=`ruby -r json -e \"puts JSON.parse(File.read('metadata.json')).fetch('version')\"`"
         - '[[ $TRAVIS_TAG =~ ^simp-${PUPMOD_METADATA_VERSION}$|^${PUPMOD_METADATA_VERSION}$ ]]'
+
       deploy:
         - provider: releases
           api_key:
@@ -86,5 +85,4 @@ jobs:
             secure: "G6QCBtcU/jI3c7QB5FCqDTHPRluDahme7m1mNI1Z6NRHy9f9QWDsqtJkzEKkG9vZoYf04ByYl1zRtKpiR5V6MT1ONKhQSwEvaHxOnHXVx/PH1js+MmvR01LpoJIiv6LpzG6qOZZWCbPLYPmDnHwe0Qb2G8L6VcqehPq47bav7EDShpMyOeeoJug2L5wLGEDfOwjz8hhRuwiKoLTcITMwvSzR9t74eGJkRQwevsG12BamCXqpmLz5D/7NA51NM1V0o0oGnFEtKKul6PbySBOo8lZlwFXhmhZsCmDAeCKMtnaNhwiePU0v2E3eSlBFq0whJK4wGVfTqldgKoqNim7AoRu7m/veB8VHf+1i2ok1tVfkJ7JzXbD9pFaHBPS/5GF85WieNP31g1liBbQRsiDECqCWRBN4g9GHPI2xyKAJDCHyo4H3jEG8jFhYdl88San+/FSXpQeKNkLpL7hT/ifLbdEMXPWhI47WzA4vbqOlNOzGPyrxGsRXklYXAKb4Nop1kqbDotQl6QB2ccdhGv67hf7ORM09ZqlUtsEKIoUCabNIqfPXy1HNGhvUPVerM4jPyjysnlEnl61nH75aNCU2di35k2S2VxaU2j33VJfsxuudoQEYMGwZgUQGEMk8IOrsAENmykOCbBnnbc+z4RaYElUMGKvH5NLsjX6on7sgU1s="
           on:
             tags: true
-            rvm: 2.4.1
             condition: '($SKIP_FORGE_PUBLISH != true)'
