@@ -1,4 +1,0 @@
-Requires: pupmod-puppetlabs-stdlib >= 4.9.0
-Requires: pupmod-puppetlabs-stdlib < 5.0.0
-Requires: pupmod-simp-simplib >= 3.1.0
-Requires: pupmod-simp-simplib < 4.0.0
